Stripped away padding internals and switched to Apache codec for base64 encoding/decoding instead of sun classes