@@ -1,14 +1,13 @@
 package com.doktuhparadox.cryptjournal.core;
 
+import org.apache.commons.codec.binary.Base64;
+
 import java.security.Key;
-import java.security.SecureRandom;
 
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 /**
  * Created and written with IntelliJ IDEA CE 14.
@@ -25,13 +24,13 @@ class Cryptor {
 		try {
 			Key key = generateKey(algorithm, password);
 			Cipher c = Cipher.getInstance(algorithm);
-			c.init(Cipher.ENCRYPT_MODE, key, new SecureRandom(password.getBytes()));
+			c.init(Cipher.ENCRYPT_MODE, key);
 			encodedStringBytes = c.doFinal(data.getBytes());
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
 
-		return new BASE64Encoder().encode(encodedStringBytes);
+	    return Base64.encodeBase64String(encodedStringBytes);
 	}
 
 	public static String de(String algorithm, String data, String password) {
@@ -40,8 +39,8 @@ class Cryptor {
 		try {
 			Key key = generateKey(algorithm, password);
 			Cipher c = Cipher.getInstance(algorithm);
-			c.init(Cipher.DECRYPT_MODE, key, new SecureRandom(password.getBytes()));
-			byte[] decodedValue = new BASE64Decoder().decodeBuffer(data);
+			c.init(Cipher.DECRYPT_MODE, key);
+			byte[] decodedValue = Base64.decodeBase64(data);
 			decodedStringBytes = c.doFinal(decodedValue);
 		} catch (BadPaddingException e) {
 			return "BAD_PASSWORD";
